got show working